# quicksight-01

./: .gitignore  AWS_IAM_Security_Project.txt  AWS_VPC_Security_Project_CKEditor.txt  README.md  aws-networks-security.txt  aws-vpc-peering.md  imageConvertScript.js  legendary-aws-networks-private.md  manifest.json  task.md
code/ai-multi-agent/: .gitignore  main.py  notes.md  pyproject.toml  research.db  summary_report.md
code/ai-structred-output/: .gitignore  blog-post.md  notes.md  open.py  pyproject.toml
code/ai-with-python/: .gitignore  blog-post.md  post-examples.json  pyproject.toml
code/ai_with_crewai/: README.md  pyproject.toml  report.md
code/ai_with_crewai/notes/: ai-crew.md
code/ai_with_crewai/src/ai_with_crewai/: crew.py  main.py
code/dockerized-laravel-project/: .gitignore  docker-compose.yaml  notes.md
code/form-actions-react/: package-lock.json
code/multitools-agent/: .gitignore  note.md  pyproject.toml
code/react-ref-portal/: notes.md  package-lock.json
code/terraform/: .gitignore
markdown/: aws-vpc-to-s3.md  test-note.md
markdown/ai_ml/: agent-vs-workflow.md  ai-blog-image-generator.md  ai-python.md  ai-usetools-simpleway_draft.md.md  ai-video-sentiment-theory.md  ai_agent_build.md  ai_multitools_agent.md  ai_workflow_control_flow.md  legendary-ai-agent-nocode.md  legendary-ai-agent-webui.md  legendary-ai-rag-api.md  legendary-ai-rag-bedrock.md  legendary-ai-rag-cloudshell.md  legendary-ai-rag-webapp.md  legendary-aws-ai-lex.md  legendary-aws-ai-lex1.md  legendary-aws-ai-lex2.md  legendary-aws-ai-lex3.md  (+2 more)
observability/: why.md
(+137 files in other folders)
