[project]
name = "ai_with_crewai"
version = "0.1.0"
description = "ai-with-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
]

[project.scripts]
ai_with_crewai = "ai_with_crewai.main:run"
run_crew = "ai_with_crewai.main:run"
train = "ai_with_crewai.main:train"
replay = "ai_with_crewai.main:replay"
test = "ai_with_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
